[package]
name = "ntpscan"
version = "0.1.0"
edition = "2024"
authors = ["Rein Fernhout (LevitatingBusinessMan)"]

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
nix = { version = "0.30.1", features = ["uio", "socket", "net", "poll"] }
rand = "0.9.1"
